--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-google-maps/api": "^2.19.3",
     "bootstrap": "^5.3.3",
     "gatsby": "^5.13.3",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
